- Added Devicon v2.15.1 (CDN)
- Added jquery.pause.js (CDN)
- Added jquery.marquee.min.js v1.3.1 (CDN)
- Added HTML5 Shiv 3.7.3
- Added jquery v3.6.4
- Added jquery-ui v1.13.2
- Added jquery.easing v1.4.1
- Added jquery.fn.extend.js v1.1 (nuke_jq) 
= Added jquery.core.js v1.1 (nuke_jq)
- Fixed Admin Database Backup System (backup to PC or backup to server)


August 2007: Version 8.1
========================
- Time for a Break I'm losing my mind!
- Settings administration module has been 100% re-writted and totaly changed and reorganized
- Added feature to let administrators choice if users can change themes or not (Administration -> Settings -> Themes)
- Added feature to select the display of the referers list in abridged or unabridged modes
- Graphic Security Check configuration is now in Administration -> Preferences -> General section (removed from config.php)
- WYSIWYG Editor configuration is now in Administration -> Preferences -> General section (removed from config.php)
- Configuration of $display_errors to show PHP error messages is now in Administration -> Preferences -> General section (removed from config.php)
- Fixed a bug on Topics module that didn't show the right content after click on "more" link and news category link (Thanks to Michael Judah fom http://ComPilots.com)
- Fixed a bug in user edit function when admin try to change user's avatar (Thanks to l4wy3r)
- Added variables filter check in banners administration (Thanks to Omid omid@hackers.ir)
- Added variables filter check in modules administration (Thanks to Omid omid@hackers.ir)
- Added variables filter check in Reviews module (Thanks to Omid omid@hackers.ir)
- Added variables filter check in Web Links module (Thanks to Omid omid@hackers.ir)
- Added AutoThemes module (free GPL edition) from http://www.spidean.com to install and control Auto Themes
- Fixed potential SQL injection in referers system
- Fixed user avatar image information when administrator creates a new user